network-policies/allow-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx
  namespace: development
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - {}
  policyTypes:
  - Ingress
